testsuite/poke.pkl/asm-exp-diag-1.pk
/* { dg-do compile } */

var a = asm int<32>:
  (20 /* { dg-error "expected string" } */
  );
